--- a/webapp1/values.yaml
+++ b/webapp1/values.yaml
@@ -10,5 +10,5 @@ configmap:
     CUSTOM_HEADER: "This app was deployed with helm!"
 
 image:
-  name: st3fus/mywebapp
+  name: devopsjourney1/mywebapp
   tag: latest
